--- a/Control_Llamadas.csproj
+++ b/Control_Llamadas.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Conexion.cs" />
     <Compile Include="Interface_Grafica.cs">
       <SubType>Form</SubType>
     </Compile>
